added app icon and adapted splashscreen entrance, fixxed UI z-index bugs and improved UI functionality

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>MeetMeFit - Sportpartner Finder</title>
+  <title>Sportbuddy - Sportpartner Finder</title>
 
   <base href="/" />
 
